--- a/netlify.yml
+++ b/netlify.yml
@@ -8,6 +8,6 @@ build:
 plugins:
   - package: netlify-plugin-axe
     config:
-      site: mycoolsite.netlify.com # your Netlify site url
+      site: netlify-plugin-axe-demo.netlify.com # your Netlify site url
       # https://github.com/dequelabs/axe-cli#running-specific-rules
       axeFlags: --rules color-contrast,html-has-lang
