--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "axe-cli": "^3.2.0",
+    "chromedriver": "^80.0.1",
     "netlify-plugin-axe": "^0.0.3"
   },
   "name": "netlify-plugin-axe-demo",
