--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "axe-cli": "^3.2.0",
     "chromedriver": "^80.0.1",
+    "make-dir": "^3.0.2",
     "netlify-plugin-axe": "^0.0.4"
   },
   "scripts": {
